<resources>
    <string name="app_name">Clean Marvel Kotlin</string>
    <string name="message_no_items_to_show">No items to show</string>
    <string name="character_image">Character Image</string>
    <string name="accept">Accept</string>
    <string name="description">Description</string>
    <string name="appearances_label">Number of appearances in comics</string>
    <string name="more_details_label">More details</string>
    <string name="see_the_comics_label">See the comics!</string>
    <string name="success_database">Characters added to the database</string>
    <string name="error_database">An error has occurred while trying to save to the database</string>
    <string name="loaded_from_database">Loaded from database</string>
    <string name="loaded_from_server">Loaded from server</string>
    <string name="landing_image">Landing image</string>

</resources>
