<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog_background_color">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_small_8"
        android:paddingEnd="@dimen/padding_small_8">

        <ImageView
            android:id="@+id/dialog_character_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/character_image"
            android:padding="@dimen/padding_small_8" />

        <TextView
            android:id="@+id/character_name"
            style="@style/Text.Dialog.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/Text.Dialog.Bullet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <TextView
            android:id="@+id/character_description"
            style="@style/Text.Dialog.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/Text.Dialog.Bullet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appearances_label" />

        <TextView
            android:id="@+id/character_appearances_comics"
            style="@style/Text.Dialog.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            style="@style/Text.Dialog.Bullet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_details_label" />

        <TextView
            android:id="@+id/character_details_link"
            style="@style/Text.Dialog.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/Text.Dialog.Bullet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_the_comics_label" />

        <TextView
            android:id="@+id/character_comics_link"
            style="@style/Text.Dialog.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>
